--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
         "eslint": "^9",
         "eslint-config-next": "15.2.4",
         "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "jsdom": "^26.0.0",
         "tailwindcss": "^4",
         "ts-jest": "^29.3.1",
+        "ts-node": "^10.9.2",
         "typescript": "^5"
     }
 }
